--- a/level-1/Calculator/index.html
+++ b/level-1/Calculator/index.html
@@ -14,30 +14,53 @@
     <div class="container mx-auto">
         <div class="row">
             <div class="col">
-                <div class="input-wrapper">
-                    <h5><button data-text="Awesome" class="button">
+                <div class="input-wrapper text-center">
+                    <h5>
+                        <button data-text="Awesome" class="button">
                             <span class="actual-text">&nbsp;Calculator&nbsp;</span>
                             <span class="hover-text" aria-hidden="true">&nbsp;Calculator&nbsp;</span>
-                        </button></h5>
+                        </button>
+                    </h5>
                     <input type="text" name="text" class="input">
-                    <div class="col-6 pt-6">
-                        <button class="btn">
-                            Button
-                        </button>
-                        <button class="btn">
-                            Button
-                        </button>
-                    </div>
                 </div>
-
-
-
             </div>
-
-
+        </div>
+    </div>
+    <div class="container-fliud text-center pt-5">
+        <div class="row d-flex justify-content-center align-items-center pt-3">
+            <button class="btn col-3 box" onclick="cls()">AC</button>
+            <button class="btn col-3 box" onclick="del()">DEL</button>
+            <button class="btn col-3 box" onclick="percentage()">%</button>
+            <button class="btn col-3 box"  onclick="storeData('/')">/</button>
+        </div>
+        <div class="row d-flex justify-content-center align-items-center">
+            <button class="btn col-3 box" onclick="storeData('7')">7</button>
+            <button class="btn col-3 box" onclick="storeData('8')">8</button>
+            <button class="btn col-3 box" onclick="storeData('9')">9</button>
+            <button class="btn col-3 box" onclick="storeData('*')">*</button>
+        </div>
+        <div class="row d-flex justify-content-center align-items-center">
+            <button class="btn col-3 box" onclick="storeData('4')">4</button>
+            <button class="btn col-3 box" onclick="storeData('5')">5</button>
+            <button class="btn col-3 box" onclick="storeData('6')">6</button>
+            <button class="btn col-3 box" onclick="storeData('-')">-</button>
+        </div>
+        <div class="row d-flex justify-content-center align-items-center">
+            <button class="btn col-3 box" onclick="storeData('1')">1</button>
+            <button class="btn col-3 box" onclick="storeData('2')">2</button>
+            <button class="btn col-3 box" onclick="storeData('3')">3</button>
+            <button class="btn col-3 box" onclick="storeData('+')">+</button>
+        </div>
+        <div class="row d-flex justify-content-center align-items-center">
+            <button class="btn col-3 box" onclick="storeData('0')">0</button>
+            <button class="btn col-3 box" onclick="storeData('.')">.</button>
+            <div class="btn col-6 box1" onclick="equal()">=</button>
         </div>
     </div>
 
+</body>
+
+</html>
 
 
 
@@ -49,10 +72,13 @@
 
 
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-        crossorigin="anonymous"></script>
-    <script src="app.js"></script>
+
+
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+    crossorigin="anonymous"></script>
+<script src="app.js"></script>
 
 </body>
 
